...
        self.btnAdd.enabled = isTestMode ? true : false;
        self.btnBack.enabled = false;
        self.btnForward.enabled = false;
        
        self.btnAdd.titleLabel?.font = UIFont.fontAwesomeOfSize(15)
        self.btnAdd.setTitle(String.fontAwesomeIconWithName(.RSSSquare), forState: .Normal)
        self.btnAdd.accessibilityLabel = "add"

        self.btnClose.titleLabel?.font = UIFont.fontAwesomeOfSize(15)
        self.btnClose.setTitle(String.fontAwesomeIconWithName(.Close), forState: .Normal)
        self.btnClose.accessibilityLabel = "close"

        self.btnBack.titleLabel?.font = UIFont.fontAwesomeOfSize(15)
        self.btnBack.setTitle(String.fontAwesomeIconWithName(.ArrowLeft), forState: .Normal)
        self.btnBack.accessibilityLabel = "back"

        self.btnForward.titleLabel?.font = UIFont.fontAwesomeOfSize(15)
...
