...
        let editButton = UIBarButtonItem()
        editButton.target = self.editButtonItem().target
        editButton.action = self.editButtonItem().action
        let attributesEdit = [NSFontAttributeName: UIFont.fontAwesomeOfSize(20)] as Dictionary!
        editButton.setTitleTextAttributes(attributesEdit, forState: .Normal)
        editButton.title = String.fontAwesomeIconWithName(.Gear)
        editButton.accessibilityLabel = "edit"
        
        self.navigationItem.leftBarButtonItem = editButton //self.editButtonItem()

        let addButton = UIBarButtonItem()
        addButton.target = self
        addButton.action = #selector(SFFeedListController.insertNewObject(_:))
...
